* marshal.c (marshal_dump, marshal_load): fix SEGV during make rdoc   and test failure in TestMarshal#test_gc and test_context_switch   on SPARC Solaris 10 compiled with Oracle Solaris Studio 12.3.   [Bug #7591] [ruby-dev:46772]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38473 b2dd03c8-39d4-4d8f-98ff-823fe69b080e